# auto-emploi

./: .env.example  .gitignore  LICENSE  README.md  config.py  data_loader.py  export_csv.py  generator.py  llm_logger.py  main.py  matcher.py  notion_db.py  prefilter.py  pyproject.toml  scraper.py  setup_notion.py  utils.py
.claude/: launch.json
cvgen/: README.md  __init__.py  accroche.py  country_rules.yaml  gap_analysis.py  generate_cv.py  llm_rotation.py  offer_mapping.py  pdf_engine.py  profile_master.example.yaml  template_cv.html
cvgen/examples/: offer_grc_fr.json  offer_scaleai.json
dashboard/: app.py  config_editor.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/frontend/src/: App.tsx  main.tsx  theme.ts
dashboard/frontend/src/api/: api.ts  useSSE.ts
dashboard/frontend/src/components/: ChatPanel.tsx  PageHeader.tsx  ProgressBar.tsx  QuotaTable.tsx  Sidebar.tsx  StatsGrid.tsx  TerminalLog.tsx  ThemeToggle.tsx  Toast.tsx
dashboard/frontend/src/pages/: Applications.tsx  Chat.tsx  Closed.tsx  Criteria.tsx  Documentation.tsx  JobTypes.tsx  Keywords.tsx  Offers.tsx  Overview.tsx  Prefilter.tsx  ProfileMaster.tsx  Prompts.tsx  Quotas.tsx  Run.tsx  ScrapeZones.tsx
dashboard/frontend/src/styles/: global.css
data/: .gitkeep  criteres.example.md
