[tool.poetry]
name = "auto-emploi"
version = "0.1.0"
description = "Système automatisé de recherche d'emploi (CDI/CDD) — cyber & IA, multi-pays"
authors = ["Emery Guendehou"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
apify-client = "^1.6.0"
litellm = "^1.52.0"
notion-client = "^2.0.0"
python-docx = "^1.1.0"
pdfplumber = "^0.11.0"
markdown = "^3.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"
google-generativeai = "^0.8.6"
google-genai = "^1.73.1"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.28"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"